[package]
name = "mecha-leptos"
description = "Personal blog frontend using WASM and leptos"
version = "0.0.1"
edition = "2021"
authors = ["Saeed Andalib <saeedandalib5@gmail.com>"]
keywords = ["blog", "frontend", "leptos", "wasm"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "mecha"
path = "src/lib/lib.rs"

[dependencies]
leptos = { version = "0.6.3", features = ["csr", "nightly"] }
