[package]
name = "mecha-leptos"
description = "Personal blog frontend using WASM and leptos"
version = "0.0.1"
edition = "2021"
authors = ["Saeed Andalib <saeedandalib5@gmail.com>"]
keywords = ["blog", "frontend", "leptos", "wasm"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "mecha"
path = "src/lib/lib.rs"

[dependencies]
chrono = { version = "0.4.33", features = ["serde"] }
leptos = { version = "0.6.3", features = ["csr", "nightly"] }
leptos_router = { version = "0.6.5", features = ["csr"] }
reqwest = { version = "0.11.26", features = ["json", "cookies"] }
serde = { version = "1.0", features = ["serde_derive"] }
turf = "0.8.0"

[build-dependencies]
dotenvy = "0.15.7"

[package.metadata.turf]
minify = true
load_paths = ["sass"]

[package.metadata.turf.file_output]
global_css_file_path = "generated/css/style.css"

[package.metadata.turf.class_names]
template = "mecha-<original_name>-<id>"
